unpackaged/main/default/objects/WorkOrder/fields/AAA_Charge_Entitlement__c.field-meta.xml
<CustomField>
    <fullName>AAA_Charge_Entitlement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox that is set when a WO is cleared. This field is Read Only for users</description>
    <label>Charge Entitlement</label>
    <type>Checkbox</type>
</CustomField>