unpackaged/main/default/objects/WorkOrder/fields/ACG_Amount__c.field-meta.xml
<CustomField>
    <fullName>ACG_Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>