unpackaged/main/default/objects/WorkOrder/fields/ACG_Call_Type__c.field-meta.xml
<CustomField>
    <fullName>ACG_Call_Type__c</fullName>
    <label>Call Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Case_ERS_Event_Types</valueSetName>
    </valueSet>
</CustomField>