unpackaged/main/default/objects/WorkOrder/fields/ACG_Requested_Appointment_Date__c.field-meta.xml
<CustomField>
    <fullName>ACG_Requested_Appointment_Date__c</fullName>
    <label>Requested Appointment Date</label>
    <type>Date</type>
</CustomField>