unpackaged/main/default/objects/WorkOrder/fields/ADP_SeqID__c.field-meta.xml
<CustomField>
    <fullName>ADP_SeqID__c</fullName>
    <label>ADP SeqID</label>
    <length>12</length>
    <type>Text</type>
</CustomField>