unpackaged/main/default/objects/WorkOrder/fields/Affiliate_Club_Service_Territory__c.field-meta.xml
<CustomField>
    <fullName>Affiliate_Club_Service_Territory__c</fullName>
    <description>This is to be used to indicate which affiliate club service territory was given the Work Order.  Currently just for Northway and Hudson Valley calls</description>
    <inlineHelpText>Use this only for AAA Northway and AAA Hudson Valley work orders</inlineHelpText>
    <label>Affiliate Club Service Territory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>H100-HUDSON VALLEY HOLDING FACILITY ALBANY NY</fullName>
            </value>
            <value>
                <fullName>H101-HUDSON VALLEY DAYTIME ALERT ALBANY NY</fullName>
            </value>
            <value>
                <fullName>H150-EAGLE TOWING</fullName>
            </value>
            <value>
                <fullName>H150-EAGLE TOWING (518)254-0000 COBLESKILL NY</fullName>
            </value>
            <value>
                <fullName>H161-MIKE SLAUSON&#39;S TOWING</fullName>
            </value>
            <value>
                <fullName>H161-MIKE SLAUSON&#39;S TOWING (518)283-7682 CASTELTON ON</fullName>
            </value>
            <value>
                <fullName>H183-INTERSTATE TOWING (518)372-7555 SCHENECTADY NY</fullName>
            </value>
            <value>
                <fullName>H193-ALPHA ROADSERVICE (518)901-9091xNavi MECHANICVILLE NY</fullName>
            </value>
            <value>
                <fullName>H204-TREV&#39;S AUTOMOTIVE (518)379-6328 CLIFTON PARK NY</fullName>
            </value>
            <value>
                <fullName>H305-GARY&#39;S GARAGE (518)869-0873 ALBANY NY</fullName>
            </value>
            <value>
                <fullName>SNY17-HUCKLES TOWING (607)565-2771 WAVERLY NY</fullName>
            </value>
            <value>
                <fullName>SNY20-GARY&#39;S AUTO BODY (607)734-5397 ELMIRA NY</fullName>
            </value>
            <value>
                <fullName>SNY3-S&amp;S SERVICE (607)467-2929 DEPOSIT NY</fullName>
            </value>
            <value>
                <fullName>SNY4-FRANK&#39;S GARAGE (607)467-2119 DEPOSIT NY</fullName>
            </value>
            <value>
                <fullName>SNY52-JOE&#39;S GARAGE (607)723-3520 BINGHAMTON NY</fullName>
            </value>
            <value>
                <fullName>SNY54-BECK&#39;S TIOGA TOWING (607)625-5653 APALACHIN NY</fullName>
            </value>
            <value>
                <fullName>SNY55-TRIPLE CITY TOWING (607)341-8610 VESTAL NY</fullName>
            </value>
            <value>
                <fullName>SNY63-JACK&#39;S AUTO BODY (607)849-3472 RICHFORD NY</fullName>
            </value>
            <value>
                <fullName>SNY69-PARMENTER TIRE, AUTO &amp; TRUCK SERVICES</fullName>
            </value>
            <value>
                <fullName>SNY6-STUDER&#39;S BODY SHOP (607)775-4629x24HR KIRKWOOD NY</fullName>
            </value>
            <value>
                <fullName>SNY75-RON&#39;S BODY AND PAINT (607)662-4543 MARATHON</fullName>
            </value>
            <value>
                <fullName>SNY82-VAL-U AUTO &amp; TOWING (607)687-0056 OWEGO</fullName>
            </value>
            <value>
                <fullName>SNY87-SCOTT&#39;S COLLISION (607)655-3368 WINDSOR NY</fullName>
            </value>
            <value>
                <fullName>SNY90-VAL-U TOWING - BINGHAMTON (607)687-0056xSHOP BINGHAMTON</fullName>
            </value>
            <value>
                <fullName>SNY93-PRO TECH SECURITY (607)723-2077 BINGHAMTON NY</fullName>
            </value>
            <value>
                <fullName>SNY9-AIRBORNE TOWING AND ROAD SERVICE (607)748-4090</fullName>
            </value>
            <value>
                <fullName>W115-SCHENECTADY LS FLEET</fullName>
            </value>
            <value>
                <fullName>W118-KINETIC TOWING (518)428-8923</fullName>
            </value>
            <value>
                <fullName>W123-SCHENECTADY TOW FLEET</fullName>
            </value>
            <value>
                <fullName>W128-TOWAWAY - SARATOGA (518)683-8119</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>