unpackaged/main/default/objects/WorkOrder/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>IF(ISPICKVAL(Status, &#39;Cleared&#39; ),
(Cleared_Timestamp__c  - CreatedDate)*1440, IF(ISPICKVAL(Status, &#39;Canceled&#39;),
0, (NOW() - CreatedDate)*1440)
)</formula>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>