unpackaged/main/default/objects/WorkOrder/fields/Amended_Charges_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Amended_Charges_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amended Charges Indicator</label>
    <type>Checkbox</type>
</CustomField>