unpackaged/main/default/objects/WorkOrder/fields/Appointment_Flag__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Flag__c</fullName>
    <formula>IF( Non_Emergency_Appointment_Time__c != null , true,false)</formula>
    <label>Appointment Flag</label>
    <type>Checkbox</type>
</CustomField>