unpackaged/main/default/objects/WorkOrder/fields/Appointment_Requested__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Appointment Requested</label>
    <type>Checkbox</type>
</CustomField>