unpackaged/main/default/objects/WorkOrder/fields/Battery_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Battery_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Battery Indicator</label>
    <type>Checkbox</type>
</CustomField>