unpackaged/main/default/objects/WorkOrder/fields/Battery_Test__c.field-meta.xml
<CustomField>
    <fullName>Battery_Test__c</fullName>
    <label>Battery Test Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>