unpackaged/main/default/objects/WorkOrder/fields/Benefit_Level__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Level__c</fullName>
    <description>This field will show benefit level for the call.</description>
    <formula>TEXT(BO_Editable_WO_Specific_Membership_Level__c)</formula>
    <label>Benefit Level</label>
    <type>Text</type>
</CustomField>