unpackaged/main/default/objects/WorkOrder/fields/BO_Editable_WO_Specific_Membership_Level__c.field-meta.xml
<CustomField>
    <fullName>BO_Editable_WO_Specific_Membership_Level__c</fullName>
    <label>BO Editable WO Specific Membership Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Plus</fullName>
            </value>
            <value>
                <fullName>Premier</fullName>
            </value>
            <value>
                <fullName>Premier RV</fullName>
            </value>
            <value>
                <fullName>Plus RV</fullName>
            </value>
            <value>
                <fullName>Classic RV</fullName>
            </value>
            <value>
                <fullName>Basic</fullName>
                <default>true</default>
                <label>Basic</label>
            </value>
            <value>
                <fullName>Everyday</fullName>
            </value>
            <value>
                <fullName>CLASSICRV</fullName>
                <isActive>false</isActive>
                <label>CLASSICRV</label>
            </value>
            <value>
                <fullName>PLUSRV</fullName>
                <isActive>false</isActive>
                <label>PLUSRV</label>
            </value>
            <value>
                <fullName>PREMIERRV</fullName>
                <isActive>false</isActive>
                <label>PREMIERRV</label>
            </value>
            <value>
                <fullName>Premier Motorcycle</fullName>
                <isActive>false</isActive>
                <label>Premier Motorcycle</label>
            </value>
            <value>
                <fullName>Y</fullName>
                <isActive>false</isActive>
                <label>Y</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>