unpackaged/main/default/objects/WorkOrder/fields/Breakdown_Address__c.field-meta.xml
<CustomField>
    <fullName>Breakdown_Address__c</fullName>
    <formula>IF(NOT(IsBlank(Street)),Street &amp; &#39;, &#39;,&#39;&#39;) &amp; IF(NOT(IsBlank(City)),City &amp; &#39;, &#39;,&#39;&#39;) &amp; IF(NOT(IsBlank(State)),State &amp; &#39; &#39;,&#39;&#39;) &amp; IF(NOT(IsBlank(PostalCode)),PostalCode,&#39;&#39;)</formula>
    <label>Breakdown Address</label>
    <type>Text</type>
</CustomField>