unpackaged/main/default/objects/WorkOrder/fields/Breakdown_Cross_Streets__c.field-meta.xml
<CustomField>
    <fullName>Breakdown_Cross_Streets__c</fullName>
    <formula>IF(Cross_Street__c!= null &amp;&amp; Cross_Street_2__c!= null , Cross_Street__c + &#39; &amp; &#39; + Cross_Street_2__c, IF(ISBLANK(Cross_Street__c) || ISBLANK(Cross_Street_2__c), Cross_Street__c+ &#39;&#39;+Cross_Street_2__c,&#39;&#39;))</formula>
    <label>Breakdown Cross Streets</label>
    <type>Text</type>
</CustomField>