unpackaged/main/default/objects/WorkOrder/fields/Breakdown_Location__c.field-meta.xml
<CustomField>
    <fullName>Breakdown_Location__c</fullName>
    <label>Breakdown_Location</label>
    <scale>5</scale>
    <type>Location</type>
</CustomField>