unpackaged/main/default/objects/WorkOrder/fields/Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Call_Date__c</fullName>
    <label>Call Date</label>
    <length>32</length>
    <type>Text</type>
</CustomField>