unpackaged/main/default/objects/WorkOrder/fields/Call_Id__c.field-meta.xml
<CustomField>
    <fullName>Call_Id__c</fullName>
    <label>Call ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>