unpackaged/main/default/objects/WorkOrder/fields/Call_Origin__c.field-meta.xml
<CustomField>
    <fullName>Call_Origin__c</fullName>
    <label>Call Origin</label>
    <length>30</length>
    <type>Text</type>
</CustomField>