unpackaged/main/default/objects/WorkOrder/fields/Call_Origin_OrgCode__c.field-meta.xml
<CustomField>
    <fullName>Call_Origin_OrgCode__c</fullName>
    <label>Call Origin OrgCode</label>
    <length>25</length>
    <type>Text</type>
</CustomField>