unpackaged/main/default/objects/WorkOrder/fields/Call_Origin_OrgName__c.field-meta.xml
<CustomField>
    <fullName>Call_Origin_OrgName__c</fullName>
    <label>Call Origin OrgName</label>
    <length>60</length>
    <type>Text</type>
</CustomField>