unpackaged/main/default/objects/WorkOrder/fields/Call_Source_Historic__c.field-meta.xml
<CustomField>
    <fullName>Call_Source_Historic__c</fullName>
    <description>Call source for Historic D3 calls. Do not use for any new functionality.</description>
    <label>Call Source (Historic)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>