unpackaged/main/default/objects/WorkOrder/fields/Call_Type_Sub__c.field-meta.xml
<CustomField>
    <fullName>Call_Type_Sub__c</fullName>
    <description>Display RAP Icon call type is RAP call</description>
    <formula>IF(Call_Type__c == &#39;RAP&#39;, IMAGE(LEFT($Api.Partner_Server_URL_260, FIND( &#39;/services&#39;, $Api.Partner_Server_URL_260)) &amp; &quot;resource/FSLGanttRapIcon&quot;, &quot;RAP&quot;), Call_Type__c)</formula>
    <inlineHelpText>Call Type</inlineHelpText>
    <label>Call Type</label>
    <type>Text</type>
</CustomField>