unpackaged/main/default/objects/WorkOrder/fields/Case_Pacesetter_Code__c.field-meta.xml
<CustomField>
    <fullName>Case_Pacesetter_Code__c</fullName>
    <formula>Case.Pacesetter_Code__c</formula>
    <label>Case Pacesetter Code</label>
    <type>Text</type>
</CustomField>