unpackaged/main/default/objects/WorkOrder/fields/Case_Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Service_Type__c</fullName>
    <formula>TEXT(Case.ACG_Service_Type__c)</formula>
    <label>Case Service Type</label>
    <type>Text</type>
</CustomField>