unpackaged/main/default/objects/WorkOrder/fields/Case_T_Code__c.field-meta.xml
<CustomField>
    <fullName>Case_T_Code__c</fullName>
    <formula>Case.T_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case T Code</label>
    <type>Text</type>
</CustomField>