unpackaged/main/default/objects/WorkOrder/fields/Cash_Call__c.field-meta.xml
<CustomField>
    <fullName>Cash_Call__c</fullName>
    <formula>Case.Impairment_COD_Payment__c</formula>
    <label>Cash Call</label>
    <type>Checkbox</type>
</CustomField>