unpackaged/main/default/objects/WorkOrder/fields/Cash_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Cash_Indicator__c</fullName>
    <formula>Case.Cash_Indicator__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cash_Indicator</label>
    <type>Text</type>
</CustomField>