unpackaged/main/default/objects/WorkOrder/fields/CDX_Name__c.field-meta.xml
<CustomField>
    <fullName>CDX_Name__c</fullName>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>