unpackaged/main/default/objects/WorkOrder/fields/CDX_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>CDX_Phone_Number__c</fullName>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>