unpackaged/main/default/objects/WorkOrder/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ARR</fullName>
            </value>
            <value>
                <fullName>DRR</fullName>
            </value>
            <value>
                <fullName>ACG DRR</fullName>
            </value>
            <value>
                <fullName>IVR</fullName>
            </value>
            <value>
                <fullName>CTI DRR</fullName>
            </value>
            <value>
                <fullName>CHATBOT</fullName>
            </value>
            <value>
                <fullName>DRRWeb 2.0 ACEAPP</fullName>
            </value>
            <value>
                <fullName>DRRWeb 2.0 SEO</fullName>
            </value>
            <value>
                <fullName>DRRWeb 2.0 IVR</fullName>
            </value>
            <value>
                <fullName>DRRWeb 2.0 800SMS</fullName>
            </value>
            <value>
                <fullName>DRRWeb 2.0 ANDROIDMOBILE</fullName>
            </value>
            <value>
                <fullName>DRRWeb 2.0 IOSMOBILE</fullName>
            </value>
            <value>
                <fullName>DRRWeb 2.0</fullName>
            </value>
            <value>
                <fullName>DRRWeb 2.0 BQ</fullName>
            </value>
            <value>
                <fullName>DRRWeb 2.0 ACEAPP-IOS</fullName>
            </value>
            <value>
                <fullName>DRRWeb 2.0 ACEAPP-ANDROIDMOBILE</fullName>
            </value>
            <value>
                <fullName>DRRCARPLAY IOS</fullName>
            </value>
            <value>
                <fullName>DRRWeb 2.0 AGENT</fullName>
            </value>
            <value>
                <fullName>RSO Chatbot</fullName>
            </value>
            <value>
                <fullName>DRRWeb 2.0 BLUESKYDRR</fullName>
            </value>
            <value>
                <fullName>DRRWeb 2.0 IVR SELF SERVICE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>