unpackaged/main/default/objects/WorkOrder/fields/chargeableCalls__c.field-meta.xml
<CustomField>
    <fullName>chargeableCalls__c</fullName>
    <label>chargeableCalls</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>