unpackaged/main/default/objects/WorkOrder/fields/Check_With_Customer__c.field-meta.xml
<CustomField>
    <fullName>Check_With_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Attribute from commercial intake</description>
    <label>Check With Customer</label>
    <type>Checkbox</type>
</CustomField>