unpackaged/main/default/objects/WorkOrder/fields/Check_With_Shop_Manager__c.field-meta.xml
<CustomField>
    <fullName>Check_With_Shop_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Attribute from commercial intake</description>
    <label>Check With Shop Manager</label>
    <type>Checkbox</type>
</CustomField>