unpackaged/main/default/objects/WorkOrder/fields/Clear_Duration__c.field-meta.xml
<CustomField>
    <fullName>Clear_Duration__c</fullName>
    <formula>IF(Is_Tow_WorkType__c, (IF (Cleared_Timestamp__c&gt;Tow_Complete_Timestamp__c ,(Cleared_Timestamp__c -  Tow_Complete_Timestamp__c)*1440,0)) , (IF (Cleared_Timestamp__c&gt; On_Location_Timestamp__c ,(Cleared_Timestamp__c -  On_Location_Timestamp__c)*1440,0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clear Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>