unpackaged/main/default/objects/WorkOrder/fields/Cleared_Time__c.field-meta.xml
<CustomField>
    <fullName>Cleared_Time__c</fullName>
    <formula>TIMEVALUE( Cleared_Time_Text__c )</formula>
    <label>Cleared Time</label>
    <type>Time</type>
</CustomField>