unpackaged/main/default/objects/WorkOrder/fields/Cleared_Time_Text__c.field-meta.xml
<CustomField>
    <fullName>Cleared_Time_Text__c</fullName>
    <label>Cleared Time Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>