unpackaged/main/default/objects/WorkOrder/fields/Cleared_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Cleared_Timestamp__c</fullName>
    <label>Cleared Timestamp</label>
    <type>DateTime</type>
</CustomField>