unpackaged/main/default/objects/WorkOrder/fields/Cleared_Timestamp_Date__c.field-meta.xml
<CustomField>
    <fullName>Cleared_Timestamp_Date__c</fullName>
    <formula>DATEVALUE(Cleared_Timestamp__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cleared Timestamp Date</label>
    <type>Date</type>
</CustomField>