unpackaged/main/default/objects/WorkOrder/fields/Cleared_Timestamp_Time__c.field-meta.xml
<CustomField>
    <fullName>Cleared_Timestamp_Time__c</fullName>
    <formula>TIMEVALUE(Cleared_Timestamp__c - (4/24))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cleared Timestamp Time</label>
    <type>Time</type>
</CustomField>