unpackaged/main/default/objects/WorkOrder/fields/Cleared_Timestamp_TOD_Code__c.field-meta.xml
<CustomField>
    <fullName>Cleared_Timestamp_TOD_Code__c</fullName>
    <formula>IF(  Created_Time__c  &lt;=   TIMEVALUE(&quot;18:59:00.000&quot;) &amp;&amp; Created_Time__c  &gt;=  TIMEVALUE (&quot;06:00:00.00&quot;), &quot;D 06:00-18:59&quot;,
     IF ( Created_Time__c  &lt;=   TIMEVALUE(&quot;23:59:00.000&quot;) &amp;&amp; Created_Time__c  &gt;=  TIMEVALUE (&quot;19:00:00.00&quot;) , &quot;N1 19:00-23:59&quot;,
        IF( Created_Time__c  &lt;=   TIMEVALUE(&quot;05:59:00.000&quot;) &amp;&amp; Created_Time__c  &gt;=  TIMEVALUE (&quot;00:00:00.00&quot;) , &quot;N2 00:00 – 05:59&quot;,
             &quot;&quot;
         )
     )
)</formula>
    <label>Cleared Timestamp TOD Code</label>
    <type>Text</type>
</CustomField>