unpackaged/main/default/objects/WorkOrder/fields/Clearing_Code__c.field-meta.xml
<CustomField>
    <fullName>Clearing_Code__c</fullName>
    <label>Clearing Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Clear_Codes</valueSetName>
    </valueSet>
</CustomField>