unpackaged/main/default/objects/WorkOrder/fields/Cloned_Duplicate_Parent__c.field-meta.xml
<CustomField>
    <fullName>Cloned_Duplicate_Parent__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Case.ClonedParent__c,Case.ClonedParent__r.CaseNumber ,&quot;_self&quot;)</formula>
    <label>Cloned/Duplicate Parent</label>
    <type>Text</type>
</CustomField>