unpackaged/main/default/objects/WorkOrder/fields/ClonedParent__c.field-meta.xml
<CustomField>
    <fullName>ClonedParent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cloned/Duplicate Parent</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>ClonedParent</relationshipName>
    <type>Lookup</type>
</CustomField>