unpackaged/main/default/objects/WorkOrder/fields/Collision__c.field-meta.xml
<CustomField>
    <fullName>Collision__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Collision</label>
    <type>Checkbox</type>
</CustomField>