unpackaged/main/default/objects/WorkOrder/fields/Comm_Ctr__c.field-meta.xml
<CustomField>
    <fullName>Comm_Ctr__c</fullName>
    <description>Gets the associated Service Territory&#39;s 3-digit Comm Ctr API value</description>
    <formula>TEXT(ServiceTerritory.Comm_Ctr__c)</formula>
    <label>Comm Ctr</label>
    <type>Text</type>
</CustomField>