unpackaged/main/default/objects/WorkOrder/fields/Contact_at_Drop_off__c.field-meta.xml
<CustomField>
    <fullName>Contact_at_Drop_off__c</fullName>
    <label>Contact at Drop-off</label>
    <length>255</length>
    <type>Text</type>
</CustomField>