unpackaged/main/default/objects/WorkOrder/fields/Created_Date_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Reporting__c</fullName>
    <formula>CreatedDate</formula>
    <label>Created Date Reporting</label>
    <type>DateTime</type>
</CustomField>