unpackaged/main/default/objects/WorkOrder/fields/Created_Time__c.field-meta.xml
<CustomField>
    <fullName>Created_Time__c</fullName>
    <formula>TIMEVALUE(MID(Parsed_Created_Time__c, 1, 8)&amp;&quot;.000&quot;)</formula>
    <label>Created Time</label>
    <type>Time</type>
</CustomField>