unpackaged/main/default/objects/WorkOrder/fields/Cross_Street_2__c.field-meta.xml
<CustomField>
    <fullName>Cross_Street_2__c</fullName>
    <label>Cross Street 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>