unpackaged/main/default/objects/WorkOrder/fields/Cross_Street__c.field-meta.xml
<CustomField>
    <fullName>Cross_Street__c</fullName>
    <label>Cross Street</label>
    <length>100</length>
    <type>Text</type>
</CustomField>