unpackaged/main/default/objects/WorkOrder/fields/currentCalls__c.field-meta.xml
<CustomField>
    <fullName>currentCalls__c</fullName>
    <label>currentCalls</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>