unpackaged/main/default/objects/WorkOrder/fields/D3_Call_Key__c.field-meta.xml
<CustomField>
    <fullName>D3_Call_Key__c</fullName>
    <label>D3 Call Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>