unpackaged/main/default/objects/WorkOrder/fields/D3_Sync_Issue__c.field-meta.xml
<CustomField>
    <fullName>D3_Sync_Issue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Will be set to true if there is an update made from D3 to FSL about a Work Order OR the update from FSL to D3 returns an error</description>
    <inlineHelpText>Indicates that this record is out of sync with the intake system</inlineHelpText>
    <label>D3 Sync Issue</label>
    <type>Checkbox</type>
</CustomField>