unpackaged/main/default/objects/WorkOrder/fields/D3_Tow_Mileage__c.field-meta.xml
<CustomField>
    <fullName>D3_Tow_Mileage__c</fullName>
    <label>D3 Tow Mileage</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>